<resources>
    <string name="app_name">American English Pronunciation</string>
    <string name="app_name_short">aep</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_history">History</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="main_tv_learn">Learn</string>
    <string name="main_tv_practice">Practice</string>
    <string name="main_tv_test">Test</string>
    <string name="main_single">Single</string>
    <string name="main_double">Double</string>
    <string name="main_test">Take a test</string>
    <string name="learn_single_instructions">Press a key to begin</string>
    <string name="tell_me_button">\?</string>
    <string name="history_username_title">Name:</string>
    <string name="history_time_title">Total time spent:</string>
    <string name="history_difficult_title">My difficult ones:</string>
    <string name="history_test_title">Tests:</string>
    <string name="history_details">Details</string>
    <string name="about_app_name">American English Pronunciation</string>
    <string name="about_content">This app is free and open source software under the GPL license. If you have any questions, comments, or suggestions, then please leave a message.</string>
    <string name="about_contact">Contact</string>
    <string name="about_update">Check for updates</string>
    <string name="title_main">Pronunciation</string>
    <string name="title_activity_learn">Learn</string>
    <string name="title_activity_learn_single">Learn Single Sounds</string>
    <string name="title_activity_learn_double">Learn Double Sounds</string>
    <string name="title_activity_practice">Practice</string>
    <string name="title_activity_practice_single">Practice Single Sounds</string>
    <string name="title_activity_practice_double">Practice Double Sounds</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_test_setup">Test Setup</string>
    <string name="title_activity_test_results">Test Results</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_history_time">Total time spent</string>
    <string name="title_activity_history_tests">Past tests</string>
    <string name="title_activity_history_test_details">Test details</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="learn_button_single">Single</string>
    <string name="learn_button_double">Double</string>
    <string name="practice_button_single">Single</string>
    <string name="practice_button_double">Double</string>
    <string name="pref_strict_mode">Strict Mode</string>
    <string name="pref_strict_mode_summary">Cannot leave the test page until finished</string>
    <string name="pref_number_questions_title">Default number of test questions</string>
    <string name="pref_number_questions_dialog">dialog title</string>
    <string name="pref_number_questions_default">50</string>
    <string name="key_11">p</string>
    <string name="key_12">t</string>
    <string name="key_13">k</string>
    <string name="key_14">ʧ</string>
    <string name="key_15">f</string>
    <string name="key_16">θ</string>
    <string name="key_17">s</string>
    <string name="key_18">ʃ</string>
    <string name="key_21">b</string>
    <string name="key_22">d</string>
    <string name="key_23">g</string>
    <string name="key_24">ʤ</string>
    <string name="key_25">v</string>
    <string name="key_26">ð</string>
    <string name="key_27">z</string>
    <string name="key_28">ʒ</string>
    <string name="key_31">m</string>
    <string name="key_32">n</string>
    <string name="key_33">ŋ</string>
    <string name="key_34">l</string>
    <string name="key_35">w</string>
    <string name="key_36">j</string>
    <string name="key_37">h</string>
    <string name="key_38">r</string>
    <string name="key_41">i</string>
    <string name="key_42">ɪ</string>
    <string name="key_43">ɛ</string>
    <string name="key_44">æ</string>
    <string name="key_45">ɑ</string>
    <string name="key_46">ɔ</string>
    <string name="key_47">ʊ</string>
    <string name="key_48">u</string>
    <string name="key_51">ʌ</string>
    <string name="key_52">ə</string>
    <string name="key_53">e</string>
    <string name="key_54">aɪ</string>
    <string name="key_55">aʊ</string>
    <string name="key_56">ɔɪ</string>
    <string name="key_57">o</string>
    <string name="key_58">ɾ</string>
    <string name="key_61">ɝ</string>
    <string name="key_62">ɚ</string>
    <string name="key_63">ɑr</string>
    <string name="key_64">ɛr</string>
    <string name="key_65">ɪr</string>
    <string name="key_66">ɔr</string>
    <string name="key_67">ʔ</string>
    <string name="p_description">/p/ is aspirated ([pʰ]) at the beginning of words but it is unaspirated ([p]) after /s/ and at the end of a word. Be careful not to read the third example /stɑpə/.</string>
    <string name="p_example1">pass\n/pæs/</string>
    <string name="p_example2">speak\n/spik/</string>
    <string name="p_example3">stop\n/stɑp/</string>
    <string name="t_description">/t/ is aspirated ([tʰ]) at the beginning of words but it is unaspirated ([t]) after /s/ and at the end of a word. Be careful not to read the third example [ɪtə] or [ɪtʰ] or [ɪts]. Also note that the letter \"t\" often changes its pronunciation in American English. See /ʔ/ and /ɾ/.</string>
    <string name="t_example1">toad\n/tod/</string>
    <string name="t_example2">sting\n/stɪŋ/</string>
    <string name="t_example3">it\n/ɪt/</string>
    <string name="k_description">/k/ is aspirated ([kʰ]) at the beginning of words but it is unaspirated ([k]) after /s/ and at the end of a word. Be careful not to read the third example /wikə/.</string>
    <string name="k_example1">cool\n/kul/</string>
    <string name="k_example2">skill\n/skɪl/</string>
    <string name="k_example3">week\n/wik/</string>
    <string name="ch_description">Make special note of the pronunciation at the end of words. Be careful not to read the third example /ʧɝʧə/.</string>
    <string name="ch_example1">chairs\n/ʧɛrz/</string>
    <string name="ch_example2">each of\n/\'iʧəv/</string>
    <string name="ch_example3">church\n/ʧɝʧ/</string>
    <string name="f_description">Make special note of the pronunciation at the end of words. Be careful not to read the third example /ɪfə/.</string>
    <string name="f_example1">father\n/\'fɑðɚ/</string>
    <string name="f_example2">gift\n/gɪft/</string>
    <string name="f_example3">if\n/ɪf/</string>
    <string name="th_voiceless_description">In this sound the tongue lightly touches the bottom of the top teeth. Do not say /s/.</string>
    <string name="th_voiceless_example1">think\n/θɪŋk/</string>
    <string name="th_voiceless_example2">Jonathan\n/\'ʤɑnəθən/</string>
    <string name="th_voiceless_example3">earth\n/ɝθ/</string>
    <string name="s_description">Make special note of the pronunciation at the end of words. Be careful not to read the third example /pæsə/.</string>
    <string name="s_example1">set\n/sɛt/</string>
    <string name="s_example2">raced\n/rest/</string>
    <string name="s_example3">pass\n/pæs/</string>
    <string name="sh_description">Make special note of the pronunciation at the end of words. Be careful not to read the third example /æʃə/.</string>
    <string name="sh_example1">shoot\n/ʃut/</string>
    <string name="sh_example2">wished\n/wɪʃt/</string>
    <string name="sh_example3">ash\n/æʃ/</string>
    <string name="b_description">Make special note of the pronunciation at the end of words. Be careful not to read the third example /rɪbə/ or /rɪp/.</string>
    <string name="b_example1">bill\n/bɪl/</string>
    <string name="b_example2">above\n/ə\'bʌv/</string>
    <string name="b_example3">rib\n/rɪb/</string>
    <string name="d_description">Make special note of the pronunciation at the end of words. Be careful not to read the third example /kɑrdə/ or /kɑrt/.</string>
    <string name="d_example1">delicious\n/də\'lɪʃəs/</string>
    <string name="d_example2">cards\n/kɑrdz/</string>
    <string name="d_example3">card\n/kɑrd/</string>
    <string name="g_description">Make special note of the pronunciation at the end of words. Be careful not to read the third example /pɪgə/ or /pɪk/.</string>
    <string name="g_example1">good\n/gʊd/</string>
    <string name="g_example2">again\n/ə\'gɛn/</string>
    <string name="g_example3">pig\n/pɪg/</string>
    <string name="dzh_description">Make special note of the pronunciation at the end of words. Be careful not to read the third example /ɛʤə/.</string>
    <string name="dzh_example1">jump\n/ʤʌmp/</string>
    <string name="dzh_example2">agile\n/\'æʤəl/</string>
    <string name="dzh_example3">edge\n/ɛʤ/</string>
    <string name="v_description">Note the difference between /v/ and /w/. In the /v/ sound the top teeth touch the bottom lip. This is the same mouth position as /f/. The only differenced is that /v/ is voiced. Also be careful not to read the third example /hævə/.</string>
    <string name="v_example1">very\n/\'vɛri/</string>
    <string name="v_example2">every\n/\'ɛvri/</string>
    <string name="v_example3">have\n/hæv/</string>
    <string name="th_voiced_description">In this sound the tongue lightly touches the bottom of the top teeth. This is the same mouth position as /θ/. The main differenced is that /ð/ is voiced.</string>
    <string name="th_voiced_example1">they\'re\n/ðɛr/</string>
    <string name="th_voiced_example2">father\n/fɑðɚ/</string>
    <string name="th_voiced_example3">bathe\n/beð/</string>
    <string name="z_description">This sound uses the same mouth position as /s/. The only differenced is that /z/ is voiced. Do not say /dz/. The English /z/ is different than the Chinese pinyin \"z\".</string>
    <string name="z_example1">zoo\n/zu/</string>
    <string name="z_example2">raised\n/rezd/</string>
    <string name="z_example3">cars\n/kɑrz/</string>
    <string name="zh_description">This sound uses the same mouth position as /ʃ/. The only differenced is that /ʒ/ is voiced. Note the difference between /r/ and /ʒ/.</string>
    <string name="zh_example1">usually\n/\'juʒli/</string>
    <string name="zh_example2">pleasure\n/\'plɛʒɚ/</string>
    <string name="zh_example3">beige\n/beʒ/</string>
    <string name="m_description">Make special note of the pronunciation at the end of words. Be careful not to read the third example /ɑrmə/.</string>
    <string name="m_example1">me\n/mi/</string>
    <string name="m_example2">jump\n/ʤʌmp/</string>
    <string name="m_example3">arm\n/ɑrm/</string>
    <string name="n_description">Make special note of the pronunciation at the end of words. Be careful not to read the third example /sʌnə/.</string>
    <string name="n_example1">new\n/nu/</string>
    <string name="n_example2">panda\n/\'pændə/</string>
    <string name="n_example3">sun\n/sʌn/</string>
    <string name="ng_description">This sound does not begin any words in English.</string>
    <string name="ng_example1">ringing\n/\'rɪŋɪŋ/</string>
    <string name="ng_example2">think\n/θɪŋk/</string>
    <string name="ng_example3">sung\n/sʌŋ/</string>
    <string name="l_description">At the beginning of words, [l] is the proper IPA symbol. However, at the end of words it is pronounced differently. The IPA for this sound is written [ɫ] but we use the /l/ symbol for both [l] and [ɫ] in this app (as do many textbooks and dictionaries). Example 2 could also be written /kuəl/. Do not pronounce the last two examples /kuo/ or /bɪo/. Your lips should be relaxed and not move.</string>
    <string name="l_example1">loud\n/laʊd/</string>
    <string name="l_example2">cool\n/kul/</string>
    <string name="l_example3">bill\n/bɪl/</string>
</resources>