<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/keyboard_base_theme"
    android:orientation="vertical" >

    
    <!-- TODO Rename all the keys according to sound, not position -->
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/key_41"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey41"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_41" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_42"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey42"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_42" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_43"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey43"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_43" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_44"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey44"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_44" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_45"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey45"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_45" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_46"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey46"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_46" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_47"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey47"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_47" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_48"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey48"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_48" />
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/key_51"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey51"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_51" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_52"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey52"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_52" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        

        <RelativeLayout
            android:id="@+id/key_53"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey53"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_53" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_54"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey54"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_54" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_55"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey55"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_55" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_56"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey56"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_56" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_57"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey57"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_57" />
        </RelativeLayout>

        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/key_61"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey61"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_61" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_62"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey62"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_62" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_63"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey63"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_63" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_64"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey64"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_64" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_65"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey65"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_65" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_66"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey66"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_66" />
        </RelativeLayout>

        
    </LinearLayout>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="5dp"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/key_11"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey11"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_11" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_12"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey12"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_12" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_13"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey13"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_13" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_14"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey14"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_14" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_15"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey15"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_15" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_16"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey16"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_16" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_17"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey17"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_17" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_18"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey18"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_18" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/key_21"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey21"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_21" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_22"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey22"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_22" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_23"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey23"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_23" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_24"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey24"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_24" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_25"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey25"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_25" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_26"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey26"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_26" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_27"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey27"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_27" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_28"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey28"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_28" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/key_31"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey31"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_31" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_32"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey32"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_32" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_33"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey33"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_33" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_34"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey34"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_34" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_35"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey35"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_35" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_36"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey36"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_36" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_37"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey37"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_37" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_38"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey38"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_38" />
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/key_67"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey67"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_67" />
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/key_58"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <com.aepronunciation.ipa.IpaTextView
                android:id="@+id/tvKey58"
                style="@style/AppTheme.KeyTextStyle"
                android:text="@string/key_58" />
        </RelativeLayout>
    </LinearLayout>

    

</LinearLayout>