<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/light_gradient"
    android:orientation="vertical" >

    <com.aepronunciation.ipa.IpaTextView
        android:id="@+id/tvAboutAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_app_name"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:textSize="20sp" />
    
    <com.aepronunciation.ipa.IpaTextView
        android:id="@+id/tvAboutVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="Version 1.0.0"
        android:textSize="15sp" />

    <com.aepronunciation.ipa.IpaTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_content"
        android:layout_margin="10dp" />

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/button"
        android:clickable="true"
        android:onClick="contactClick"
        android:padding="10dp" >

        <com.aepronunciation.ipa.IpaTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/about_contact"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

</LinearLayout>